--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,8 @@
 !/tmp/pids/.keep
 
 # Ignore uploaded files in development.
-/storage/*
-!/storage/.keep
+/test/storage/*
+!/test/storage/.keep
 /tmp/storage/*
 !/tmp/storage/
 !/tmp/storage/.keep
